# parser2

./: 2gispars.xlsx  README.md  check_file_email.py  get_email.py  list_from_exel.py  output (копия).txt  output.txt  post_mail.txt  pyproject.toml  send_email.py  text_for_mail.txt
